# spencer-ai-trading-bot

./: .gitignore  AUDIT_REPORT.md  BRAIN.md  CANDIDATE_TEMPLATE.md  CONTRIBUTING.md  DATA_SOURCE_RESEARCH_PLAN.md  Dockerfile  MASTERY_LEDGER.md  MISTAKE_REVIEW.md  OPEN_AI_TRADE_IN_VSCODE.bat  PROJECT_STATUS.md  README.md  RESEARCH_PROTOCOL.md  RUN_SPENCER_SERVER.bat  SECURITY.md  SPENCER_CONCEPT.md  START_LIVE_TUNNEL.bat  START_SPENCER_AI.bat  paper_engine.py  pyproject.toml  requirements.txt  spencer_quote_server.py
backend/: .env.example  package-lock.json  package.json  server.js
bot/: __init__.py  backtest.py  blockdeal_eval.py  capital_governor.py  charges.py  coach.py  config.py  control.py  dashboard.py  db.py  delivery_eval.py  engine.py  entry_policy.py  event_eval.py  execution_sim.py  feature_eval.py  features.py  flows_eval.py  gapup_confirm.py  gdelt_news.py  governance.py  holidays.py  indicators.py  intraday_backtest.py  intraday_eval.py  learner.py  live_paper_trader.py  logger_config.py  market_data.py  midcap_eval.py  migrations.py  mistake_review.py  monitor.py  news_sentiment_eval.py  nse_block_deals.py  nse_delivery.py  nse_flows.py  obsidian_brain.py  portfolio.py  regime_learner.py  (+10 more)
brain/: Account Epoch.md  Backtest Harness.md  Block Deals.md  Brain Exporter.md  ChatGPT.md  Claude Code.md  Codex.md  Components.md  Concepts.md  Confirm-or-Kill.md  Cost Bar.md  Data & Readiness.md  Data Clock.md  Data Sources.md  Delivery Volume Result.md  Delivery Volume.md  Deployment Gate.md  Doctrine.md  FII-DII Flows.md  GDELT GKG (BigQuery).md  GDELT News.md  (+38 more)
(+316 files in other folders)
